🆕 feat(HistoryPage): Add top floating date bar

--- a/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
@@ -1,6 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div id="@Id"
+<div @ref="element"
+    id="@Id"
      class="my-scroll-container @(Class)"
      style="@(Style)"
      @oncontextmenu="OnContextmenu">
