Clean up useless code

--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -10,7 +10,7 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText>
+        <MCardText Class="pb-0">
             <div>
                 <MChipGroup @bind-Value="DefaultDate" Column="true">
                     @foreach (var item in DefaultDates)
