♻️ refactor(LocationPage): change style and fixed delete wrong

--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -37,7 +37,7 @@
 <DeleteDialog @bind-Value="ShowDeleteDiary"
               Title="@(I18n.T("Diary.Delete.Title"))"
               Content="@(I18n.T("Diary.Delete.Content"))"
-              OnOK="()=>HandleDelete(SelectDiary)">
+              OnOK="()=>HandleDelete(SelectedDiary)">
 </DeleteDialog>
 
 <ExportDialog @bind-Value="ShowExport" Diaries="ExportDiaries">
