--- a/SwashbucklerDiary/Components/MyComponents/TagCard/TagCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard/TagCardList.razor
@@ -5,9 +5,9 @@
     @foreach (var item in Value!)
     {
         <TagCard Value="item"
-             OnDelete="()=>OpenDeleteDialog(item)"
-             OnRename="()=>HandleRename(item)"
-             OnClick="()=>HandleClick(item.Id)">
+             OnDelete="OpenDeleteDialog"
+             OnRename="OpenRenameDialog"
+             OnClick="HandleClick">
         </TagCard>
     }
 </div>
@@ -21,14 +21,14 @@
     </div>
 }
 
-<InputDialog @bind-Value="ShowRenameTag"
-             @bind-Text="RenameTagName"
+<InputDialog @bind-Value="ShowRename"
+             @bind-Text="SelectedTag.Name"
              Title="@(I18n.T("Tag.Rename"))"
              Placeholder="@(I18n.T("Tag.Placeholder"))"
-             OnOK="SaveRenameTag">
+             OnOK="HandleRename">
 </InputDialog>
 
-<DeleteDialog @bind-Value="ShowDeleteTag"
+<DeleteDialog @bind-Value="ShowDelete"
               Title="@(I18n.T("Tag.Delete.Title"))"
               Content="@(I18n.T("Tag.Delete.Content"))"
               OnOK="()=>HandleDelete(SelectedTag)">
