🆕 feat: Support change macOS title bar color

--- a/SwashbucklerDiary/App.xaml
+++ b/SwashbucklerDiary/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
 
-            <Color x:Key="PageBackgroundColor">#000</Color>
+            <Color x:Key="PageBackgroundColor">#fff</Color>
             <Color x:Key="PrimaryTextColor">White</Color>
 
             <Style TargetType="Label">
