--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -7,7 +7,7 @@
 <MAppBar App="true"
          Elevation="0">
     <MToolbarTitle Class="font-weight-bold">
-        @(I18n.T("Mine.MySpace"))
+        @(I18n.T("Mine.Mine"))
     </MToolbarTitle>
 </MAppBar>
 
