🔥chore: Adjusting directory structure

--- a/SwashbucklerDiary/Pages/Mine/About/RelatedOSPPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/RelatedOSPPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/relatedOSP"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("About.Related"))" OnClick="NavigateToBack">
