--- a/SwashbucklerDiary/Pages/Mine/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AboutPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/about"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("Mine.About"))" OnClick="NavigateToBack">
