--- a/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/achievement"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n!.T("Mine.Achievement"))" OnClick="NavigateToBack">
