--- a/SwashbucklerDiary/Pages/Mine/Settings/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/LocationPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/location"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("Setting.Diary.Location"))" OnClick="NavigateToBack">
