--- a/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/privacyLibrary"
+@namespace SwashbucklerDiary.Pages
 @inherits DiariesPageComponentBase
 
 <MAppBar App="true" Elevation="0">
