--- a/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/privacy-policy"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("About.Privacy"))" OnClick="NavigateToBack">
