--- a/SwashbucklerDiary/Pages/Mine/About/UserAgreementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/UserAgreementPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/user-agreement"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("About.Agreement"))"
