--- a/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/permission"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("Setting.Safe.Permission"))" OnClick="NavigateToBack">
