--- a/SwashbucklerDiary/Pages/Mine/UserPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/UserPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/user"
+@namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
 <MyAppBar Title="@(I18n.T("User.Title"))" OnClick="NavigateToBack">
