--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -5,15 +5,16 @@
     @foreach (var item in Value)
     {
         <DiaryCard Value="item"
-               Class="@CardClass"
-               Privacy="PrivacyMode"
-               OnTag="HandleTag"
-               OnCopy="HandleCopy"
-               OnDelete="OpenDeleteDialog"
-               OnTopping="HandleTopping"
-               OnExport="OpenExportDialog"
-               OnPrivacy="HandlePrivacy"
-               OnClick="HandleClick">
+                   Class="@CardClass"
+                   Privacy="ShowPrivacy"
+                   Icon="ShowIcon"
+                   OnTag="HandleTag"
+                   OnCopy="HandleCopy"
+                   OnDelete="OpenDeleteDialog"
+                   OnTopping="HandleTopping"
+                   OnExport="OpenExportDialog"
+                   OnPrivacy="HandlePrivacy"
+                   OnClick="HandleClick">
         </DiaryCard>
     }
 </div>
@@ -28,7 +29,7 @@
 }
 
 <SelectTags @bind-Value="ShowSelectTag"
-            @bind-Values="SelectedTags"
+@bind-Values="SelectedTags"
             Tags="Tags"
             TagsChanged="TagsChanged"
             OnSave="SaveSelectTags">
