♻️ refactor: Refactoring dynamic lists

--- a/SwashbucklerDiary/Shared/MainBottomNavigation.razor
+++ b/SwashbucklerDiary/Shared/MainBottomNavigation.razor
@@ -1,6 +1,6 @@
 ﻿@using SwashbucklerDiary.IServices
 @using SwashbucklerDiary.Models
-@implements IDisposable
+@inherits MainNavigationCompontentBase
 
 <MBottomNavigation Value="Value"
                    ValueChanged="ValueChanged"
@@ -10,7 +10,7 @@
                    App="true">
     @foreach (var (item, i) in Items.Select((v, i) => (v, i)))
     {
-        <MButton Ripple="false" OnClick="()=>item.OnClick.InvokeAsync()">
+        <MButton Ripple="false" OnClick="item.OnClick">
             <MIcon>
                 @(Value == i ? item.SelectedIcon : item.Icon)
             </MIcon>
@@ -19,37 +19,7 @@
 </MBottomNavigation>
 
 @code {
-    [Inject]
-    private MasaBlazor MasaBlazor { get; set; } = default!;
-    [Inject]
-    private II18nService I18n { get; set; } = default!;
-    [Inject]
-    private NavigationManager Navigation { get; set; } = default!;
-
-    [Parameter]
-    public StringNumber Value { get; set; } = 0;
-    [Parameter]
-    public EventCallback<StringNumber> ValueChanged { get; set; }
-    [Parameter]
-    public List<NavigationButton> Items { get; set; } = new();
-
-    public void Dispose()
-    {
-        MasaBlazor.Breakpoint.OnUpdate -= InvokeStateHasChangedAsync;
-        GC.SuppressFinalize(this);
-    }
-
-    protected override Task OnInitializedAsync()
-    {
-        MasaBlazor.Breakpoint.OnUpdate += InvokeStateHasChangedAsync;
-        return base.OnInitializedAsync();
-    }
-
-    private async Task InvokeStateHasChangedAsync()
-    {
-        await InvokeAsync(StateHasChanged);
-    }
-
+    
     private bool Show
     {
         get
