🆕 feat: add export file type ".md"

--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
@@ -54,7 +54,7 @@
                     @foreach (var item in ListItemModels)
                     {
                         <MListItem Class="px-0" OnClick="()=>OnClick(item.OnClick)">
-                            <MListItemIcon>
+                            <MListItemIcon Class="my-3">
                                 <MIcon Class="list-item-icon">
                                     @(item.Icon)
                                 </MIcon>
