🐛 fix： image share color wrong

--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -43,7 +43,7 @@
 </MAppBar>
 
 <ScrollContainer>
-    <div id="screenshot">
+    <div id="screenshot" class="theme-element">
         <div class="px-3 d-flex align-end">
             <span class="text-h6 font-weight-bold">
                 @(Diary.CreateTime.ToString("yyyy/MM/dd"))
