🔥 chore: arrange code

--- a/SwashbucklerDiary/Pages/HistoryPage.razor
+++ b/SwashbucklerDiary/Pages/HistoryPage.razor
@@ -25,7 +25,7 @@
         </MDatePicker>
     </div>
 
-    <div class="float-calendar">
+    <div class="float-calendar theme-element">
         <MTextField @bind-Value="PickedDate"
                     Class="rounded-lg"
                     Dense="true"
