--- a/SwashbucklerDiary/Pages/Mine/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AboutPage.razor
@@ -32,8 +32,8 @@
     @foreach (var list in ViewLists)
     {
         <MCard Class="@($"{(ViewLists.Last() != list?"mb-5":"")}")"
-           Elevation="0"
-           Rounded="@("lg")">
+               Elevation="0"
+               Rounded="@("lg")">
             <MList>
                 @foreach (var item in list)
                 {
@@ -68,5 +68,32 @@
              ListItemModels="CodeSources">
 
 </MultiDialog>
+
+<MMDialog @bind-MyValue="ShowVersionUpdate"
+          MaxWidth="420">
+    <MCard Rounded="@("lg")">
+        <MCardTitle Class="font-weight-bold">
+            @(I18n.T("About.Check for updates"))
+            <MSpacer></MSpacer>
+            <MButton Icon="true" OnClick="()=>ShowVersionUpdate=false">
+                <MIcon>mdi-close</MIcon>
+            </MButton>
+        </MCardTitle>
+        <MCardText Class="pb-0">
+            @(I18n.T("VersionUpdate.Need updates"))
+        </MCardText>
+        <MCardActions>
+            <MSpacer></MSpacer>
+            <MButton Text="true" OnClick="()=>ShowVersionUpdate=false">
+                @(I18n.T("Share.Cancel"))
+            </MButton>
+            <MButton Text="true"
+                     Color="primary"
+                     OnClick="ToUpdate">
+                @(I18n.T("Share.OK"))
+            </MButton>
+        </MCardActions>
+    </MCard>
+</MMDialog>
 
 <SponsorDialog @bind-Value="ShowSponsor" />
