♻️ refactor(LogPage): use new  DateFilterDialog

--- a/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
@@ -67,8 +67,7 @@
 </ScrollContainer>
 
 <DateFilterDialog @bind-Value="ShowFilter"
-                  @bind-DateMinValue="MinDate"
-                  @bind-DateMaxValue="MaxDate"
+                  @bind-Form="DateFilterForm"
                   OnOK="UpdateLogs"
                   OnReset="UpdateLogs">
 </DateFilterDialog>
